--- a/网站链接.md
+++ b/网站链接.md
@@ -1,11 +1,17 @@
-考拉软件：[考拉软件-专注分享实用软件](https://www.rjctx.com/)
+考拉软件：[考拉软件-专注分享实用软件](https://www.rjctx.com/) 
 
 阿里矢量图标库：[iconfont-阿里巴巴矢量图标库](https://www.iconfont.cn/)
 
-中国色：[zhongguose － 传统颜色](https://www.zhongguose.com/#yanhong)
+中国色：[zhongguose － 传统颜色 ](https://www.zhongguose.com/#yanhong) ——颜色样式
 
-打字：[dazidazi-在线打字练习-提高打字速度-打字测试-标准指法](https://dazidazi.com/)
+打字：[dazidazi-在线打字练习-提高打字速度-打字测试-标准指法](https://dazidazi.com/) ——练习手速
 
-cursor：[Cursor - The AI Code Editor](https://www.cursor.com/cn)
+cursor：[Cursor - The AI Code Editor ](https://www.cursor.com/cn) ——AI编程
 
-无限邮箱：[2925邮箱-无限邮](https://www.2925.com/login/)
+无限邮箱：[2925邮箱-无限邮](https://www.2925.com/login/) ——卡邮箱注册
+
+深言达意：[深言达意 – 找词找句](https://www.shenyandayi.com/) ——主要是按需找词句
+
+AI大全：[AIGC工具导航 | 生成式人工智能工具导航平台官网](https://www.aigc.cn/) ——包含所有AI网站，覆盖许多方向
+
+Web UI 组件库：[Layui - 极简模块化前端 UI 组件库(官方文档)](https://layui.dev/) ——方便编写前端页面
